--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ void loop()  // 主循環
     <input type="radio" name="tab" id="tab3" />
     <label for="tab3">視頻</label>
     <div class="section">
-      Interactive
+      Video
     </div>
   </li>
   <li>
