--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ void loop()  // 主循環
     <input type="radio" name="tab" id="tab3" />
     <label for="tab3">視頻</label>
     <div class="section">
-      Video
+      <iframe  width="1000" height="auto" src="https://www.youtube.com/watch?v=WWD1Dkhm50U"  frameborder="0" allowfullscreen></iframe>
     </div>
   </li>
   <li>
