--- a/index.html
+++ b/index.html
@@ -162,6 +162,8 @@ void loop()  // 主循環
     <label for="tab3">視頻</label>
     <div class="section">
       <iframe  width="1000" height="auto" src="https://www.youtube.com/watch?v=WWD1Dkhm50U"  frameborder="0" allowfullscreen></iframe>
+      <br><br><br>
+      <h>LINK: </h><a href="https://www.youtube.com/watch?v=WWD1Dkhm50U">https://www.youtube.com/watch?v=WWD1Dkhm50U</a>
     </div>
   </li>
   <li>
