--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </li>
   <li>
     <input type="radio" name="tab" id="tab2" />
-    <label for="tab2">程式解釋</label>
+    <label for="tab2">程式和解釋</label>
     <div class="section">
     <pre>//
 #include&lt;LiquidCrystal.h&lg;  // 引入LiquidCrystal庫，用於控制LCD顯示屏
